# RAG_Suppport_DNN

./: .gitignore  .pylintrc  AGENTS.md  IMPLEMENTATION_SUMMARY.md  JASPER_IMPROVEMENTS_APPLIED.md  JASPER_STORAGE_ENHANCEMENTS.md  JEPA_CODING_PLAN.md  Jepa_stage2.md  README.md  TASK5_SUMMARY.md  TASK6_SUMMARY.md  TASK7_SUMMARY.md  pyproject.toml  test_clustering_assignment.py  validate_task5.py  validate_task6.py
.github/: copilot-instructions.md
.github/agents/: code_planner.agent.md  coder.agent.md  nn-reviewer.agent.md  planner.agent.md
.github/workflows/: dependency-check.yml  python-checks.yml
RAG_supporters/: DEFAULT_CONSTS.py  __init__.py  requirements-dev.txt  requirements.txt  requirements_agents.txt
RAG_supporters/agents/: README.md  TEXT_AUGMENTATION_GUIDE.md  __init__.py  cluster_steering.py  csv_question_agent.py  dataset_check.py  domain_assesment.py  question_augmentation_agent.py  source_assesment.py  text_augmentation.py
RAG_supporters/augmentations/: __init__.py  embedding.py
RAG_supporters/clustering/: __init__.py  centroid_comparison.py  clustering_data.py  keyword_clustering.py  source_assignment.py  suggestion_clustering.py  test_keyword_clustering.py  topic_distance_calculator.py
RAG_supporters/clustering_ops/: __init__.py  link_sources.py  parse_clusters.py
RAG_supporters/contrastive/: __init__.py  build_steering.py  mine_negatives.py
RAG_supporters/data_prep/: __init__.py  dataset_splitter.py  merge_csv.py  split.py
RAG_supporters/data_validation/: __init__.py  label_calculator.py  tensor_utils.py  validation_utils.py
RAG_supporters/dataset/: QUICK_REFERENCE.md  README_CLUSTER_STEERING.md  SAMPLE_GENERATION_GUIDE.md  __init__.py  build.py  build_steering.py  cluster_labeled_dataset.py  dataset_builder_README.md  dataset_splitter.py  domain_assessment_dataset_builder.py  domain_assessment_parser.py  embed.py  example_usage.py  finalize.py  jasper_steering_dataset.py  jepa_steering_dataset.py  label_calculator.py  link_sources.py  loader.py  merge_csv.py  mine_negatives.py  parse_clusters.py  rag_dataset.py  split.py  sqlite_storage.py  steering_embedding_generator.py  tensor_utils.py  test_dataset_splitter.py  test_torch_dataset.py  torch_dataset.py  validation_utils.py
RAG_supporters/embeddings/: __init__.py  core.py  io.py  keyword_embedder.py  text_embedder.py  wrapper.py
RAG_supporters/embeddings_ops/: __init__.py  embed.py  steering_embedding_generator.py
RAG_supporters/jasper/: __init__.py  build.py  builder_config.py  finalize.py  sqlite_storage.py
agents_notes/: MODULE_MAP_USAGE.md  PROJECT_STRUCTURE.md  generate_module_map.py  module_map.json  module_reference.md  search_module_map.py  view_module_map.py
configs/: jasper_base.yaml  subspace_jasper.yaml
dependencies/: requirements-dev.txt  requirements-nn.txt  requirements.txt  requirements_agents_base.txt  requirements_agents_hf.txt  requirements_agents_nvidia.txt  requirements_agents_nvidia_mamba.txt  requirements_agents_openai.txt
docs/: AGENTS.md  AGENTS_OVERVIEW.md  CLUSTERING_AND_ASSIGNMENT.md  CLUSTERING_OPERATIONS.md  CLUSTER_STEERING_DATASET.md  CSV_QUESTION_AGENT.md  DATASET_SPLITTING.md  DATA_PREPARATION.md  DOMAIN_ANALYSIS_AGENT.md  DOMAIN_ASSESSMENT_CLUSTERING_DATASET_EXAMPLE.md  DOMAIN_ASSESSMENT_EXAMPLES.md  GENERAL_UTILITIES.md  IMPLEMENTATION_SUMMARY.md  JASPER_BUILDER.md  LLM_STEERING_GUIDE.md  MODULE_DOCUMENTATION.md  README.md  REFACTORING_SUMMARY.md  STEERING_EXAMPLES.md  TEXT_AUGMENTATION_GUIDE.md  TOPIC_DISTANCE_CALCULATOR.md  reorganize_docs.sh
examples/: README.md  dataset_splitting_example.py  llm_cluster_steering_demo.py  text_augmentation_example.py  train_jasper.py  train_jasper_predictor.py  train_jasper_subspace.py  train_subspace_jasper.py
scripts/: review_llm_outputs.py
tests/: IMPLEMENTATION_SUMMARY.md  conftest.py  test_build_steering.py  test_builder_config.py  test_cluster_steering.py  test_clustering_ops.py  test_csv_split_build.py  test_dataset_build.py  test_dataset_builders.py  test_dataset_check_agent.py  test_dataset_splitter.py  test_decomposed_predictor.py  test_domain_assesment.py  test_ema_encoder.py  test_embed.py  test_finalize.py  test_jasper_losses.py  test_jasper_predictor.py  test_jasper_steering_dataset.py  test_jasper_trainer.py  test_jepa_steering_dataset.py  test_keyword_clustering.py  test_link_sources.py  test_loader.py  test_losses.py  test_merge_csv.py  test_mine_negatives.py  test_monitoring.py  test_nn_models.py  test_parse_clusters.py  test_question_augmentation_agent.py  test_routing_losses.py  test_source_evaluation_agent.py  test_split.py  test_splitting.py  test_subspace_router.py  test_tensor_utils.py  test_text_augmentation_agent.py  test_text_embedder.py  test_topic_distance_calculator.py  (+4 more)
(+93 files in other folders)
