[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-support-dnn"
version = "1.0.0"
description = "RAG (Retrieval-Augmented Generation) support tools and agents for dataset creation, curation, and enhancement"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michal Krawczyk", email = "michalkrawczyk@example.com"}
]
keywords = [
    "RAG",
    "retrieval-augmented-generation",
    "dataset-curation",
    "LLM",
    "machine-learning",
    "question-answering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/michalkrawczyk/RAG_Suppport_DNN"
Documentation = "https://github.com/michalkrawczyk/RAG_Suppport_DNN/tree/main/docs"
Repository = "https://github.com/michalkrawczyk/RAG_Suppport_DNN"
Issues = "https://github.com/michalkrawczyk/RAG_Suppport_DNN/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["RAG_supporters*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
RAG_supporters = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["dependencies/requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
openai = {file = ["dependencies/requirements_agents_openai.txt"]}
nvidia = {file = ["dependencies/requirements_agents_nvidia.txt"]}
nvidia-mamba = {file = ["dependencies/requirements_agents_nvidia_mamba.txt"]}
base = {file = ["dependencies/requirements_agents_base.txt"]}
dev = {file = ["dependencies/requirements-dev.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    # Coverage options require pytest-cov: pip install pytest-cov
    # "--cov=RAG_supporters",
    # "--cov-report=term-missing",
    # "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (require API keys)",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["RAG_supporters"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"tests/**/*.py" = ["B", "C"]  # Ignore complexity checks in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "sklearn.*",
    "torch.*",
    "datasets.*",
]
ignore_missing_imports = true

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.design]
max-args = 10
max-attributes = 15
